@@ -635,7 +635,7 @@ following image formats are supported:
 @item QCELP / PureVoice      @tab     @tab  X
 @item QDesign Music Codec 2  @tab     @tab  X
     @tab There are still some distortions.
-@item RealAudio 1.0 (14.4K)  @tab     @tab  X
+@item RealAudio 1.0 (14.4K)  @tab  X  @tab  X
     @tab Real 14400 bit/s codec
 @item RealAudio 2.0 (28.8K)  @tab     @tab  X
     @tab Real 28800 bit/s codec
